[package]
name = "layerzero-dvn-blueprint-template-lib"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "evm", "macros", "local-store"] }
color-eyre.workspace = true
serde.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
url = "2.5.4"

[build-dependencies]
blueprint-sdk = { workspace = true, features = ["build"] }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle", "evm"] }
tower = { workspace = true, features = ["filter"] }

[package.metadata.blueprint]
manager = { Evm = "LayerZeroDVNBlueprint" }
master_revision = "Latest"

[workspace]
members = ["layerzero-dvn-blueprint-bin", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Tangle Blueprint specifying a LayerZero Decentralized Verifier Network (DVN)"
authors = ["Tangle Network <drew@tangle.tools>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/layerzero-dvn-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
layerzero-dvn-blueprint-template-lib = { path = "." }

#blueprint-sdk = { git = "https://github.com/tangle-network/blueprint" }
blueprint-sdk = { path = "../gadget/crates/sdk" }
color-eyre = "0.6"
serde = "1.0.213"
async-trait = "0.1.85"
serde_json = "1.0.135"
tokio = "1.44.1"
tracing-subscriber = "0.3.19"
tower = "0.5.2"